[project]
name = "pyotherside_utils"
version = "1.0"
authors = [
  { name="roundedrectangle" },
]
description = "Utilities for PyOtherSide"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

# dependencies = []

[project.optional-dependencies]
httpx = ["httpx"]

[project.urls]
Homepage = "https://github.com/roundedrectangle/pyotherside-utils"
Issues = "https://github.com/roundedrectangle/pyotherside-utils/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"